traefik/traefik-prometheus.yml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`r1`) && PathPrefix(`/traefik/metrics`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
